log/build_2022-10-16_22-11-33/turtle_brick/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/alyssa/homework2-alyssa225/install/turtle_brick/lib/python3.10/site-packages/turtle_brick/turtle_robot.py", line 33
    def turtle_odom(, child_id, x,y,z,):
                    ^
SyntaxError: invalid syntax

